# matias-livecv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.md  frontend_base.md  pyproject.toml  tailwind.config.js
agents/: agent_backend.md  agent_frontend.md  agent_qa.md
app/: main.py
app/admin/: auth.py  views.py
app/core/: database.py  prompts.py  security.py  settings.py
app/models/: __init__.py  chat_logs.py  contact_messages.py  experiences.py  profile.py  project_images.py  projects.py  rag_documents.py  skills.py  spoken_languages.py  uploaded_documents.py  users.py
app/routers/: chat.py  contact_messages.py  experiences.py  pages.py  profile.py  projects.py  skills.py  spoken_languages.py
app/schemas/: chat.py  contact_messages.py  experiences.py  profile.py  projects.py  skills.py  spoken_languages.py
app/services/: ai_service.py  image_service.py  storage_service.py
migrations/: env.py
migrations/versions/: 0877eff2f3f2_add_uploaded_documents_table.py  3fe294c6943d_add_matias_ai_tables.py  408d807d4f0c_split_trilingual_cv_urls.py  678097a2072c_split_trilingual_cv_urls_fixed.py  bc280a520d00_split_trilingual_cv_urls.py  d3f046a84352_sync_missing_created_ad_column.py  eaf4c83bbe7f_create_initial_tables.py  f0a7b5eeb8e7_normalize_project_images_with_is_cover.py
static/css/: input.css  output.css
static/js/: interactions.js  neural-bg.js
templates/: base.html  index.html
templates/fragments/: about.html  chat_modal.html  contact.html  experience.html  home.html  projects.html  projects_expanded.html  (+1 more)
(+1 files in other folders)
